add voice creation for output
